force-app/main/default/objects/ARF_Twilio_Config__c/ARF_Twilio_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Twilio API configuration for SMS and Voice. Add your Twilio credentials here.</description>
    <label>ARF Twilio Config</label>
</CustomObject>