force-app/main/default/objects/ARF_Twilio_Config__c/fields/Account_SID__c.field-meta.xml
<CustomField>
    <fullName>Account_SID__c</fullName>
    <description>Twilio Account SID (starts with AC...)</description>
    <label>Account SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>