force-app/main/default/objects/ARF_Twilio_Config__c/fields/Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token__c</fullName>
    <description>Twilio Auth Token — keep this secret</description>
    <label>Auth Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>