force-app/main/default/objects/ARF_Twilio_Config__c/fields/Callback_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Callback_Base_URL__c</fullName>
    <description>Base URL for Twilio callbacks (your Salesforce Site URL, e.g. https://yourorg.my.salesforce-sites.com)</description>
    <label>Callback Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>