force-app/main/default/objects/ARF_Twilio_Config__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Twilio phone number in E.164 format (e.g. +14155551234)</description>
    <label>Phone Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>