force-app/main/default/objects/ARF_Twilio_Config__c/fields/TwiML_App_SID__c.field-meta.xml
<CustomField>
    <fullName>TwiML_App_SID__c</fullName>
    <description>Twilio TwiML Application SID (starts with AP...). Used for browser-based WebRTC calling.</description>
    <label>TwiML App SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>